src/scss/components/_quick-link.scss
.page-list .profile-item {
  overflow: visible;
  &.has-quick-link {
    padding-right: 20px;
    min-height: 70px;
    @media(min-width: $screen-md) {
      min-height: 65px;
    }
  }
}

.quick-link {
  position: absolute;
  top: 0;
  right: 0;
  width: 20px;

  .dropdown {
    &.ql-open:hover,
    &:hover {
      & > .dropdown-menu {
        @media(min-width: $screen-md) {
          display: block;
          // Fake hover intent.
          &:before {
            content: "";
            position: absolute;
            top:-30px;
            right:0;
            width: 60%;
            height: 30px;
          }
          &:after {
            content: "";
            position: absolute;
            top:-50px;
            right:0;
            width: 35%;
            height: 50px;
            cursor: pointer;
          }
        }
      }
      .quick-link-dots{
        @media(min-width: $screen-md) {
          opacity: 1;
        }
      }
    }

    .dropdown-menu {
      margin-top: -10px;
      &.dropdown-menu-right {
        left: auto;
      }
    }
    &.ql-open {
      & > .dropdown-menu {
        display: block;
        @media(min-width: $screen-md) {
          display: none;
        }
      }
      .quick-link-dots {
        opacity: 1;
        @media(min-width: $screen-md) {
          opacity: 0.5;
        }
      }
    }
  }

  & > .dropdown > button {
    padding:0 5px;
    height: 35px;
    border: none;
    background: none;
    @media(min-width: $screen-md) {
      height: 35px;
    }
  }
  .dropdown-menu > li:last-child:after {
    // Adding spacing when at the bottom of the page.
    content: "";
    height: 1px;
    width: 1px;
    position: absolute;
    bottom: -70px;
    opacity: 0;
  }
  .dropdown-menu > li > button {
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    white-space: nowrap;
    color: $dropdown-link-color;
    width: 100%;
    text-align: left;
    transition:color .2s, background-color .2s;
    &:hover,
    &:focus {
      outline: none;
      text-decoration: none;
      color: $dropdown-link-hover-color;
      background-color: $dropdown-link-hover-bg;
    }
    &.btn-warning {
      background: $secondary-color-1;
      color: $white;
      border: 1px solid $secondary-color-1;
    }
  }
  .dropdown-menu > .disabled > button {
    color: $dropdown-link-disabled-color;
    outline: none;
    &:focus,
    &:hover {
      color: $dropdown-link-disabled-color;
      text-decoration: none;
      cursor: not-allowed;
      background-color: transparent;
      background-image: none;
      outline: none;
    }
  }
  .quick-link-dots{
    width: 10px;
    height: 10px;
    @include border-radius(10px);
    background-color: $primary-color-1;
    display: block;
    opacity: 0.5;
    transition: opacity linear 200ms;
    &:before,
    &:after {
      content: "";
      position: absolute;
      width: 10px;
      height: 10px;
      @include border-radius(10px);
      background-color:  $primary-color-1;
      left: 5px;
    }
    &:before {
      margin-top: -15px;
    }
    &:after {
      margin-top: 15px;
    }
  }
}

